Inclusion of route GET /v1/partner/{id}/
