# src/main/java/com/github/fernandotaa/partner/entrypoint/rest/PartnerController.java
@@ -1,20 +1,19 @@
 package com.github.fernandotaa.partner.entrypoint.rest;
 
-import com.github.fernandotaa.partner.core.usecase.entity.Partner;
 import com.github.fernandotaa.partner.core.usecase.getterbyid.PartnerGetterByIdInputValues;
-import com.github.fernandotaa.partner.core.usecase.getterbyid.PartnerGetterByIdOutputValues;
 import com.github.fernandotaa.partner.core.usecase.getterbyid.PartnerGetterByIdUseCase;
 import com.github.fernandotaa.partner.core.usecase.saver.PartnerSaverInputValues;
 import com.github.fernandotaa.partner.core.usecase.saver.PartnerSaverUseCase;
 import com.github.fernandotaa.partner.entrypoint.rest.data.PartnerBatchRequest;
 import com.github.fernandotaa.partner.entrypoint.rest.data.PartnerBatchResponse;
 import com.github.fernandotaa.partner.entrypoint.rest.data.PartnerResponse;
+import com.github.fernandotaa.partner.entrypoint.rest.exception.NotFoundException;
 import lombok.AllArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.client.HttpClientErrorException;
 
 import javax.validation.Valid;
-import java.util.Optional;
 
 /**
  * Representation of web service that manages domain Partner.
@@ -47,7 +46,7 @@ public class PartnerController {
         var output = partnerGetterByIdUseCase.execute(input);
         var partnerOptional = output.getPartner();
         if (partnerOptional.isEmpty()) {
-            //todo : throw notfound
+            throw new NotFoundException("partner not found");
         }
         return PartnerResponse.from(partnerOptional.get());
     }
