# src/main/java/com/github/fernandotaa/partner/entrypoint/rest/handler/GlobalExceptionHandler.java
@@ -1,5 +1,6 @@
 package com.github.fernandotaa.partner.entrypoint.rest.handler;
 
+import com.github.fernandotaa.partner.entrypoint.rest.exception.NotFoundException;
 import com.github.fernandotaa.partner.entrypoint.rest.handler.data.ApiError;
 import com.github.fernandotaa.partner.entrypoint.rest.handler.data.Error;
 import org.apache.commons.collections4.ListUtils;
@@ -9,6 +10,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.http.converter.HttpMessageNotReadableException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
+import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.context.request.WebRequest;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
 
@@ -16,6 +18,13 @@ import java.util.stream.Collectors;
 
 @ControllerAdvice
 public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
+
+    @ExceptionHandler(value = {NotFoundException.class})
+    protected ResponseEntity<ApiError> notFound(RuntimeException exception) {
+        ApiError apiError = new ApiError(exception.getMessage(), null);
+
+        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(apiError);
+    }
 
     @Override
     protected ResponseEntity<Object> handleMethodArgumentNotValid(MethodArgumentNotValidException ex, HttpHeaders headers, HttpStatus status, WebRequest request) {
